# kintaro_compositions

./: .gitignore
away/: Cargo.toml
away/src/: main.rs  template.socool
bach_1_ach_blieb_bei_uns_herr_jesu_christ/: .gitignore
bach_1_ach_blieb_bei_uns_herr_jesu_christ/save/: saved.json
bach_1_ach_blieb_bei_uns_herr_jesu_christ/src/: color.rs  template.socool  toy.wgsl
bach_2_ach_gott_erhor_mein_seufzen/save/: saved.json
bach_2_ach_gott_erhor_mein_seufzen/src/: color.rs  instancer.rs  shader.wgsl  template.socool  toy.wgsl
backgrounds/src/: generated.wgsl  main.rs  purple_planet.wgsl  purple_planet_2.wgsl  shader2.wgsl  song.socool  toy.wgsl  toy_blinds.wgsl  toy_bridge.wgsl  toy_bridge_wild.wgsl  toy_circles.wgsl  toy_more_red_blue_stripes.wgsl  toy_more_red_blue_stripes_2.wgsl  toy_red_blue.wgsl  toy_stable_1.wgsl  toy_stripes.wgsl  toy_wow_black.wgsl
blitz/src/: color.rs  main.rs  template.socool  template3.socool
clifford/src/: color.rs  main.rs  template.socool  toy.wgsl
daemon/src/: main.rs  template.socool  template2.socool  template3.socool  template4.socool
data_meg/: .gitignore  data_shorten.py  process_fif.py
dragon/src/: color.rs  geneva.socool  homes.csv  homes.json  instancer.rs  instancer2.rs  log.txt  main.rs  make_csv.ts  messages.csv  rooms.csv  rooms.json  toy2.wgsl
draw_straws/src/: main.rs  (+1 more)
eeg/: Cargo.toml
meg/: .gitignore  data_shorten.py
meg/templat/: Cargo.toml  left_temporal.json  neuromeg.json
meg/templat/src/: main.rs
meg/templat/src/template/: template.hbs
rapid/: .gitignore
stack/: .gitignore
(+83 files in other folders)
