[package]
name = "templat"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "=1.0.10"
handlebars = "4.1.6"
serde_json = "1.0.74"
env_logger = "0.9.0"
serde = {version = "1.0.133", features = ["derive"] }
log = "0.4.14"
walkdir = "2.3.2"
tap = "1.0.1"
